:globe_with_meridians: [#4545] Extract translatable messages

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -1589,6 +1589,11 @@
     "description": "Default delete confirmation message",
     "originalDefault": "Are you sure you want to delete this?"
   },
+  "Z5lydZ": {
+    "defaultMessage": "Introduction page",
+    "description": "form.introductionPageContent label",
+    "originalDefault": "Introduction page"
+  },
   "ZB6mnn": {
     "defaultMessage": "The variable key must be unique within a form",
     "description": "Unique key error message",
@@ -1838,6 +1843,11 @@
     "defaultMessage": "Date",
     "description": "data type date",
     "originalDefault": "Date"
+  },
+  "dyBb9g": {
+    "defaultMessage": "Content for the introduction page that leads to the start page of the form. Leave blank to disable the introduction page.",
+    "description": "form.introductionPageContent help text",
+    "originalDefault": "Content for the introduction page that leads to the start page of the form. Leave blank to disable the introduction page."
   },
   "eBk+W0": {
     "defaultMessage": "Manage process variables",
