--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1604,6 +1604,11 @@
     "description": "Default delete confirmation message",
     "originalDefault": "Are you sure you want to delete this?"
   },
+  "Z5lydZ": {
+    "defaultMessage": "Introduction page",
+    "description": "form.introductionPageContent label",
+    "originalDefault": "Introduction page"
+  },
   "ZB6mnn": {
     "defaultMessage": "De sleutel van een variabele moet uniek zijn binnen een formulier",
     "description": "Unique key error message",
@@ -1856,6 +1861,11 @@
     "defaultMessage": "Datum",
     "description": "data type date",
     "originalDefault": "Date"
+  },
+  "dyBb9g": {
+    "defaultMessage": "Content for the introduction page that leads to the start page of the form. Leave blank to disable the introduction page.",
+    "description": "form.introductionPageContent help text",
+    "originalDefault": "Content for the introduction page that leads to the start page of the form. Leave blank to disable the introduction page."
   },
   "eBk+W0": {
     "defaultMessage": "Beheer procesvariabelen",
