--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -403,11 +403,6 @@
     "description": "Logic type selection label",
     "originalDefault": "Please select the logic type:"
   },
-  "9HyRBr": {
-    "defaultMessage": "Something went wrong retrieving the available catalogues. Please check that the services in the selected API group are configured correctly.",
-    "description": "ZGW APIs registrations options: catalogue select error",
-    "originalDefault": "Something went wrong retrieving the available catalogues. Please check that the services in the selected API group are configured correctly."
-  },
   "9LdZVP": {
     "defaultMessage": "Attribuut",
     "description": "Variable prefill attribute label",
@@ -1080,6 +1075,11 @@
     "defaultMessage": "De gekozen trigger-stap bestaat niet (meer) in het formulier. Gelieve deze te wijzigen.",
     "description": "Warning missing trigger step",
     "originalDefault": "The selected trigger step could not be found in this form! Please change it!"
+  },
+  "LkrFow": {
+    "defaultMessage": "Something went wrong while retrieving the available catalogues or case/document types defined in the selected catalogue. Please check that the services in the selected API group are configured correctly.",
+    "description": "ZGW APIs registrations options: generic error",
+    "originalDefault": "Something went wrong while retrieving the available catalogues or case/document types defined in the selected catalogue. Please check that the services in the selected API group are configured correctly."
   },
   "LrlAVD": {
     "defaultMessage": "Gegevensverwerking",
@@ -2397,11 +2397,6 @@
     "defaultMessage": "Geeft aan hoe niet voltooide inzendingen (door fouten in de afhandeling) worden opgeschoond na de bewaartermijn. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
     "description": "Errored Submissions Removal Method help text",
     "originalDefault": "How errored submissions of this form will be removed after the limit. Leave blank to use value in General Configuration."
-  },
-  "qe9DEL": {
-    "defaultMessage": "Something went wrong retrieving the available case types. Please check that the services in the selected API group are configured correctly.",
-    "description": "ZGW APIs registrations options: case type select error",
-    "originalDefault": "Something went wrong retrieving the available case types. Please check that the services in the selected API group are configured correctly."
   },
   "qo1UbS": {
     "defaultMessage": "Exporteren",
