--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -373,6 +373,11 @@
     "isTranslated": true,
     "originalDefault": "Type"
   },
+  "8ZSQ9s": {
+    "defaultMessage": "Whether to display the short progress summary, indicating the current step number and total amount of steps.",
+    "description": "Summary of the progress help text",
+    "originalDefault": "Whether to display the short progress summary, indicating the current step number and total amount of steps."
+  },
   "8hSjw4": {
     "defaultMessage": "Component {label} ({key}) steunt op een niet-bestaande component key {missingKey} in de eenvoudige logica.",
     "description": "Wrong simple logic warning",
@@ -507,6 +512,11 @@
     "defaultMessage": "Formulier",
     "description": "Form fields tab title",
     "originalDefault": "Form"
+  },
+  "Bc8xyG": {
+    "defaultMessage": "Show summary progress",
+    "description": "showSummaryProgress field label",
+    "originalDefault": "Show summary progress"
   },
   "BcuXrg": {
     "defaultMessage": "Waar/vals (boolean)",
