:globe_with_meridians: [#4608] Update JS translation assets

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -569,6 +569,11 @@
     "description": "'Map to geometry field' checkbox help text",
     "originalDefault": "Whether to map this variable to the {geometryPath} attribute"
   },
+  "CGTS1p": {
+    "defaultMessage": "Prefill attribute",
+    "description": "Accessible label for prefill attribute dropdown",
+    "originalDefault": "Prefill attribute"
+  },
   "CN9j+L": {
     "defaultMessage": "Delete",
     "description": "Delete icon title",
@@ -898,6 +903,11 @@
     "defaultMessage": "Object and/or product request definition",
     "description": "Objects registration: object definition",
     "originalDefault": "Object and/or product request definition"
+  },
+  "I9+K9f": {
+    "defaultMessage": "Mappings",
+    "description": "Objects API prefill mappings fieldset title",
+    "originalDefault": "Mappings"
   },
   "IhIqdj": {
     "defaultMessage": "Decision definition ID",
