--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -424,6 +424,11 @@
     "description": "Objects API registration options: warning message when changing the object type",
     "originalDefault": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?"
   },
+  "9aLRWy": {
+    "defaultMessage": "Prefill property",
+    "description": "Accessible label for prefill property dropdown",
+    "originalDefault": "Prefill property"
+  },
   "9bGp7h": {
     "defaultMessage": "Active",
     "description": "Form active field label",
@@ -568,11 +573,6 @@
     "defaultMessage": "Whether to map this variable to the {geometryPath} attribute",
     "description": "'Map to geometry field' checkbox help text",
     "originalDefault": "Whether to map this variable to the {geometryPath} attribute"
-  },
-  "CGTS1p": {
-    "defaultMessage": "Prefill attribute",
-    "description": "Accessible label for prefill attribute dropdown",
-    "originalDefault": "Prefill attribute"
   },
   "CN9j+L": {
     "defaultMessage": "Delete",
