--- a/src/openforms/js/components/admin/forms/VariableMapping.mdx
+++ b/src/openforms/js/components/admin/forms/VariableMapping.mdx
@@ -5,12 +5,41 @@ import * as VariableMappingStories from './VariableMapping.stories';
 
 <Meta of={VariableMappingStories} />
 
-# Variable selection dropdown
+# Mapping variables
 
-Widget to map form variables to (configurable) targets
+Often form variables (from components and user-defined, optionally including static variables) need
+to be mapped to or from another sort of variable/property. This can be achieved with the
+`VariableMapping` component.
+
+It is hardcoded to provide the form variable in one column, and takes a second column with the
+'property' to map to/from. The direction of the mapping depends on the context where it's used.
 
 <Canvas of={VariableMappingStories.Default} />
 
-### Props
+## Data shape
+
+The component operates on `Formik` data - you pass it the name (e.g. `container.mappings`) that
+holds the array with the mapped items. Within each item, a key `formVariable` must be present that
+contains the value/key of the form variable. The other key must be specified through the
+`propertyName` prop.
+
+In TypeScript-like code:
+
+```ts
+// K must be the `propertyName` prop
+interface Mapping<K extends string> {
+  formVariable: string;
+  [K]: any;
+}
+
+const mappings: Mapping<'someProperty'>[] = [
+  {
+    formVariable: 'someFormComponent',
+    someProperty: 'foo',
+  },
+];
+```
+
+## Props
 
 <ArgTypes of={VariableMapping} />
