:recycle: [#4608] Refactor updated VariableMapping interface in prefill modal
After changing the API of the VariableMapping, the tests and implementation
in the prefill configuration modal needed to be updated to be compatible.

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -424,11 +424,6 @@
     "description": "Objects API registration options: warning message when changing the object type",
     "originalDefault": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?"
   },
-  "9aLRWy": {
-    "defaultMessage": "Prefill property",
-    "description": "Accessible label for prefill property dropdown",
-    "originalDefault": "Prefill property"
-  },
   "9bGp7h": {
     "defaultMessage": "Active",
     "description": "Form active field label",
@@ -1314,6 +1309,11 @@
     "description": "Variable prefill configuration modal title",
     "originalDefault": "Prefill configuration"
   },
+  "QzZdVz": {
+    "defaultMessage": "Something went wrong while retrieving the available object types.",
+    "description": "Objects API registrations options: object type select error",
+    "originalDefault": "Something went wrong while retrieving the available object types."
+  },
   "R7XVbR": {
     "defaultMessage": "Main/representee",
     "description": "Identifier role (for mandate context) label for representee",
@@ -1328,11 +1328,6 @@
     "defaultMessage": "{viewMode, select, ui {Show JSON definition} json {Show editor} other {UNKNOWN}}",
     "description": "Toggle icon for JSON logic presentation mode.",
     "originalDefault": "{viewMode, select, ui {Show JSON definition} json {Show editor} other {UNKNOWN}}"
-  },
-  "RM89fL": {
-    "defaultMessage": "Something went wrong retrieving the available object types.",
-    "description": "Objects API registrations options: object type select error",
-    "originalDefault": "Something went wrong retrieving the available object types."
   },
   "RcVlPF": {
     "defaultMessage": "Internal name/title of the form",
@@ -2279,6 +2274,11 @@
     "description": "Logic trigger heading",
     "originalDefault": "Trigger condition"
   },
+  "nYePys": {
+    "defaultMessage": "Something went wrong while retrieving the available object type versions.",
+    "description": "Objects API registrations options: object type version select error",
+    "originalDefault": "Something went wrong while retrieving the available object type versions."
+  },
   "neCqv9": {
     "defaultMessage": "The registration result will be an object from the selected type.",
     "description": "Objects API registration options 'Objecttype' helpText",
@@ -2569,6 +2569,11 @@
     "description": "History link button",
     "originalDefault": "History"
   },
+  "vAZDY4": {
+    "defaultMessage": "Source path",
+    "description": "Prefill / Objects API: column header for object type property selection",
+    "originalDefault": "Source path"
+  },
   "vNRiMn": {
     "defaultMessage": "Theme",
     "description": "Form theme field label",
@@ -2748,5 +2753,10 @@
     "defaultMessage": "Use logic rules to determine the price",
     "description": "dynamic pricing mode label",
     "originalDefault": "Use logic rules to determine the price"
+  },
+  "zwOwrD": {
+    "defaultMessage": "Select a property from the object type",
+    "description": "Prefill / Objects API: accessible label for object type property selection",
+    "originalDefault": "Select a property from the object type"
   }
 }
