--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -428,11 +428,6 @@
     "description": "Objects API registration options: warning message when changing the object type",
     "originalDefault": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?"
   },
-  "9aLRWy": {
-    "defaultMessage": "Prefill property",
-    "description": "Accessible label for prefill property dropdown",
-    "originalDefault": "Prefill property"
-  },
   "9bGp7h": {
     "defaultMessage": "Actief",
     "description": "Form active field label",
@@ -1326,6 +1321,11 @@
     "description": "Variable prefill configuration modal title",
     "originalDefault": "Prefill configuration"
   },
+  "QzZdVz": {
+    "defaultMessage": "Er ging iets fout bij het ophalen van de objecttypes.",
+    "description": "Objects API registrations options: object type select error",
+    "originalDefault": "Something went wrong while retrieving the available object types."
+  },
   "R7XVbR": {
     "defaultMessage": "hoofdentiteit",
     "description": "Identifier role (for mandate context) label for representee",
@@ -1340,11 +1340,6 @@
     "defaultMessage": "{viewMode, select, ui {Toon JSON-definitie} json {Toon normale interface} other {UNKNOWN}}",
     "description": "Toggle icon for JSON logic presentation mode.",
     "originalDefault": "{viewMode, select, ui {Show JSON definition} json {Show editor} other {UNKNOWN}}"
-  },
-  "RM89fL": {
-    "defaultMessage": "Er ging iets fout bij het ophalen van de objecttypes.",
-    "description": "Objects API registrations options: object type select error",
-    "originalDefault": "Something went wrong retrieving the available object types."
   },
   "RcVlPF": {
     "defaultMessage": "Interne naam van het formulier voor onderscheid in overzichten",
@@ -2298,6 +2293,11 @@
     "description": "Logic trigger heading",
     "originalDefault": "Trigger condition"
   },
+  "nYePys": {
+    "defaultMessage": "Something went wrong while retrieving the available object type versions.",
+    "description": "Objects API registrations options: object type version select error",
+    "originalDefault": "Something went wrong while retrieving the available object type versions."
+  },
   "neCqv9": {
     "defaultMessage": "Het registratieresultaat zal een object van dit type zijn.",
     "description": "Objects API registration options 'Objecttype' helpText",
@@ -2588,6 +2588,11 @@
     "description": "History link button",
     "originalDefault": "History"
   },
+  "vAZDY4": {
+    "defaultMessage": "Source path",
+    "description": "Prefill / Objects API: column header for object type property selection",
+    "originalDefault": "Source path"
+  },
   "vNRiMn": {
     "defaultMessage": "Stijl",
     "description": "Form theme field label",
@@ -2768,5 +2773,10 @@
     "defaultMessage": "Gebruik prijsregels om de prijs te bepalen",
     "description": "dynamic pricing mode label",
     "originalDefault": "Use logic rules to determine the price"
+  },
+  "zwOwrD": {
+    "defaultMessage": "Select a property from the object type",
+    "description": "Prefill / Objects API: accessible label for object type property selection",
+    "originalDefault": "Select a property from the object type"
   }
 }
