:globe_with_meridians: [#4524] Updated translations

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -1264,6 +1264,11 @@
     "description": "Times Component field label",
     "originalDefault": "Times Component"
   },
+  "PtUsDT": {
+    "defaultMessage": "User variables",
+    "description": "Variable source group label for user defined variables",
+    "originalDefault": "User variables"
+  },
   "PtZ96W": {
     "defaultMessage": "Alias",
     "description": "Manage process vars alias column title",
@@ -1373,6 +1378,11 @@
     "defaultMessage": "Organisation RSIN",
     "description": "ZGW APIs registration options 'organisationRSIN' label",
     "originalDefault": "Organisation RSIN"
+  },
+  "SgdAj7": {
+    "defaultMessage": "Static variables",
+    "description": "Variable source group label for static variables",
+    "originalDefault": "Static variables"
   },
   "SjbNyf": {
     "defaultMessage": "Add variable",
@@ -2078,6 +2088,11 @@
     "defaultMessage": "Attachment informatieobjecttype",
     "description": "Objects API registration options \"Attachment informatieobjecttype\" label",
     "originalDefault": "Attachment informatieobjecttype"
+  },
+  "iXJKU7": {
+    "defaultMessage": "Component variables",
+    "description": "Variable source group label for component variables",
+    "originalDefault": "Component variables"
   },
   "iZESbd": {
     "defaultMessage": "is less than",
