--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1275,6 +1275,11 @@
     "description": "Times Component field label",
     "originalDefault": "Times Component"
   },
+  "PtUsDT": {
+    "defaultMessage": "Gebruikersvariabelen",
+    "description": "Variable source group label for user defined variables",
+    "originalDefault": "User variables"
+  },
   "PtZ96W": {
     "defaultMessage": "Alias",
     "description": "Manage process vars alias column title",
@@ -1385,6 +1390,11 @@
     "defaultMessage": "RSIN Organisatie",
     "description": "ZGW APIs registration options 'organisationRSIN' label",
     "originalDefault": "Organisation RSIN"
+  },
+  "SgdAj7": {
+    "defaultMessage": "Vaste variabelen",
+    "description": "Variable source group label for static variables",
+    "originalDefault": "Static variables"
   },
   "SjbNyf": {
     "defaultMessage": "Variabele toevoegen",
@@ -2097,6 +2107,11 @@
     "defaultMessage": "Informatieobjecttype bijlagen",
     "description": "Objects API registration options \"Attachment informatieobjecttype\" label",
     "originalDefault": "Attachment informatieobjecttype"
+  },
+  "iXJKU7": {
+    "defaultMessage": "Component variabelen",
+    "description": "Variable source group label for component variables",
+    "originalDefault": "Component variables"
   },
   "iZESbd": {
     "defaultMessage": "is kleiner dan",
